css/main.css
/* ==========================================================================
   HTML5 Boilerplate styles - h5bp.com (generated via initializr.com)
   ========================================================================== */

html,
button,
input,
select,
textarea {
    color: #222;
}

body {
    font-size: 1em;
    line-height: 1.4;
}

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

img {
    vertical-align: middle;
}

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

textarea {
    resize: vertical;
}

.chromeframe {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}


/* ===== Initializr Styles ==================================================
   Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
   ========================================================================== */

body {
    font: 16px/26px Helvetica, Helvetica Neue, Arial;
    background-color: #fafafa;
}

.wrapper {
    width: 90%;
    margin: 0 5%;
}

/* ===================
    ALL: Orange Theme
   =================== */

@media only screen and (min-width: 768px) {
   .main-container {
       background: url('../img/furley_bg.png');
   }
   .main.wrapper {
       padding-left: 2em;
       padding-right: 2em;
   }
}

/* 1.5 dpr */
@media (min-width: 768px) and (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi){
.main-container {
    background: url('../img/furley_bg_@2x.png');
}
}

.header-container {
    border-bottom: 10px solid #cc5500;
    padding-bottom: 10px;
}

.footer-container,
.main aside {
    border-top: 10px solid #cc5500;
}

@media screen and (min-width: 768px) {
    .main aside {
        margin-top: 10px;
        border-top: 5px solid #cc5500;
    }
}

.header-container,
.footer-container,
.main aside,
.main.wrapper {
    /*background: #f6f6f6;*/
    background: #fafafa;

}

.main-container {
    position: relative;
    z-index: -10;
}

.title {
    color: #222222;
    font-family: 'Fjalla One', sans-serif;
}

/* ==============
    MOBILE: Menu
   ============== */

nav ul {
    margin: 0;
    padding: 0;
}

nav a {
    display: block;
    margin-bottom: 5px;
    padding: 5px 0;

    text-align: center;
    text-decoration: none;
    font-weight: bold;

    color: #222222;
    background: #d5d5d5;
}

nav a:hover,
nav a:visited {
    color: #222222;
}

nav a:hover {
    text-decoration: underline;
}

/* ==============
    MOBILE: Main
   ============== */

h1.title {
    font-size: 2.2em;
    line-height: 1.2em;
    margin: .2em 0 0;
}

h3.title {
    font-size: 1.5em;
    font-style: italic;
    margin: .2em 0 .5em .5em;
}

.main {
    padding: 10px 0 20px;
}

.main article h1 {
    font-size: 2em;
}

.main aside {
    color: #222222;
    padding: 0px 5% 10px;
}

.footer-container footer {
    color: #222222;
    padding: 20px 0;
}

header.presenter h3 {
    margin: 5px 0 -1em;
}

/* ===============
    ALL: IE Fixes
   =============== */

.ie7 .title {
    padding-top: 20px;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

.bar-ut {
   width: 100%;
   background-color: white;
   height: 35px;
}

.bar-library {
    width: 100%;
    background-color: #cc5500;
    height: 28px;
}

table.schedule {
    width: 100%;
}

table.schedule thead {
    font-weight: bold;
}

table.schedule tr td:first-child {
    text-align: right;
    padding-right: 30px;
}





/* ==========================================================================
   Media Queries
   ========================================================================== */

@media only screen and (min-width: 480px) {

/* ====================
    INTERMEDIATE: Menu
   ==================== */

    nav a {
        float: none;
        width: auto;
        border-radius: 2px;
        margin: 5px 1.7%;
        padding: 5px 5px;
        margin-bottom: 0;
    }


/* ========================
    INTERMEDIATE: IE Fixes
   ======================== */

    nav ul li {
        display: inline;
    }

    .oldie nav a {
        margin: 0 0.7%;
    }
}

@media only screen and (min-width: 768px) {

/* ====================
    WIDE: CSS3 Effects
   ==================== */

    .header-container,
    .main aside {
        -webkit-box-shadow: 0 5px 10px #aaa;
           -moz-box-shadow: 0 5px 10px #aaa;
                box-shadow: 0 5px 10px #aaa;
    }

/* ============
    WIDE: Menu
   ============ */

    .title {
        float: none;
    }

    nav {
        float: right;
        width: 100%;
    }

    nav a {
        display: inline;
        padding: 5px 10px;
        margin: 0 5px;
        line-height: 2em;
    }

    nav a:first-child {
        margin: 0 5px 0 0;
    }

    footer.wrapper {
        width: auto;
        padding: 0;
    }

    footer nav a {
        display: inline;
        padding: 0;
        font-size: .7em;
        /*background-color: #f6f6f6;*/
        background-color: #fafafa;
    }

    footer nav li:before {
        content: '|\00a0\00a0';
    }

    footer nav li:first-child:before {
        content: '';
    }

/* ============
    WIDE: Main
   ============ */

    .main article {
        float: left;
        width: 57%;
    }

    .main article.noaside {
        width: 90%;
    }

    .main aside {
        float: right;
        width: 28%;
    }
}

@media only screen and (min-width: 1000px) {

/* ===============
    In betweener for the header
   =============== */

    .title {
        clear: both;
    }

}

@media only screen and (min-width: 1140px) {

/* ===============
    Maximal Width
   =============== */

    .wrapper {
        width: 1026px; /* 1140px - 10% for margins */
        margin: 0 auto;
    }

    nav {
        float: left;
        width: 90%;
        margin: 0 auto;
    }
    footer nav {
        float: none;
        width: 1026px;
        margin: 0 auto;
    }
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

.ir {
    background-color: transparent;
    border: 0;
    overflow: hidden;
    *text-indent: -9999px;
}

.ir:before {
    content: "";
    display: block;
    width: 0;
    height: 150%;
}

.hidden {
    display: none !important;
    visibility: hidden;
}

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

.invisible {
    visibility: hidden;
}

.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

.clearfix {
    *zoom: 1;
}

/* ==========================================================================
   Print styles
   ========================================================================== */

@media print {
    * {
        background: transparent !important;
        color: #000 !important; /* Black prints faster: h5bp.com/s */
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links for images, or javascript/internal links
     */

    .ir a:after,
    a[href^="javascript:"]:after,
    a[href^="#"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group; /* h5bp.com/t */
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    @page {
        margin: 0.5cm;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

